Fix Inicio story

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,12 +5,9 @@
 	<title>Inicio</title>
 </head>
 <body>
-<h1>Bienvenido al POKEMASTER</h1>
-	<form>
-		<input type="submit" name="inicioBtn" value="Ingresar Jugada" id="inicioBtn">
+<h1 id="titulo">Bienvenido al POKEMASTER</h1>
+	<form action="/jugada" method="POST">
+		<input type="submit" name="inicioBtn" value="Iniciar" id="inicioBtn">
 	</form>
-	<div id="jugadasPrevias">
-		
-	</div>
 </body>
 </html>
