Add pantalla de juego

--- a/views/jugada.erb
+++ b/views/jugada.erb
@@ -2,8 +2,64 @@
 <html>
 <head>
 	<title></title>
+	<style type="text/css">
+		table{
+			width: 100%;
+		}
+
+		tr{
+			width: 100%;
+		}
+		tr td{
+			width: 100px;
+			height: 50px;
+		}
+	</style>
 </head>
 <body>
 	<h1 id="jugada">Realizar jugadas</h1>
+
+	<table border="1">
+		<tr>
+			<th>#</th>
+			<th>1</th>
+			<th>2</th>
+			<th>3</th>
+			<th>4</th>
+			<th>PICAS</th>
+			<th>FIJAS</th>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
+	<hr>
+	<form>
+		<label for="jugada">Jugada</label><input type="text" name="jugada"> <input type="submit" value="Jugar!">
+	</form>
 </body>
 </html>
