--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inicio</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<style type="text/css">
+		.center{
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
-<h1 id="titulo">Bienvenido al POKEMASTER</h1>
+<h1 id="titulo" class="center">Bienvenido al POKEMASTER</h1>
 	<form action="/jugada" method="POST">
-		<input type="submit" name="inicioBtn" value="Iniciar" id="inicioBtn">
+		<input type="submit" name="inicioBtn" value="Iniciar" id="inicioBtn" class="btn btn-default center">
 	</form>
 </body>
 </html>
