Add realizar jugada

--- a/views/jugada.erb
+++ b/views/jugada.erb
@@ -16,10 +16,10 @@
 	<table class="table table-striped">
 		<tr>
 			<th>#</th>
-			<th>1</th>
-			<th>2</th>
-			<th>3</th>
-			<th>4</th>
+			<th id="number1">1</th>
+			<th id="number2">2</th>
+			<th id="number3">3</th>
+			<th id="number4">4</th>
 			<th>PICAS</th>
 			<th>FIJAS</th>
 		</tr>
